--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DotNetCoreWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=DotNetCoreWebMVCContext-3ee4ca3f-590a-4f66-9397-1b44d888de48;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DotNetCoreWebMVCContext": "Host=localhost;Database=firstapp;Username=postgres;Password=postgres"
   }
 }
