--- a/DotNetCoreWebMVC.csproj
+++ b/DotNetCoreWebMVC.csproj
@@ -5,6 +5,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Migrations\20190401124158_OtherEntities.cs" />
+    <Compile Remove="Migrations\20190401124158_OtherEntities.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
