Update Seller and Custom Service Exception.

--- a/DotNetCoreWebMVC.csproj
+++ b/DotNetCoreWebMVC.csproj
@@ -23,4 +23,7 @@
     <None Remove="Views\Sellers\Delete.html" />
     <None Remove="Views\Sellers\Delete.chtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\Exceptions\" />
+  </ItemGroup>
 </Project>
