--- a/DotNetCoreWebMVC.csproj
+++ b/DotNetCoreWebMVC.csproj
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\Exceptions\" />
+    <Folder Include="Views\SalesRecords\" />
   </ItemGroup>
 </Project>
